--- a/css/style.css
+++ b/css/style.css
@@ -533,21 +533,21 @@ img {
   display: flex !important;
 }
 
-.header-nav__item {
+.header-nav__list li {
   font-size: 1.4rem;
   margin-bottom: 30px;
   position: relative;
 }
 
 @media screen and (min-width: 1024px), print {
-  .header-nav__item {
+  .header-nav__list li {
     margin-right: 20px;
     margin-bottom: 0;
   }
-  .header-nav__item:last-of-type {
+  .header-nav__list li:last-of-type {
     margin-right: 0;
   }
-  .header-nav__item::after {
+  .header-nav__list li::after {
     content: "";
     width: 100%;
     height: 3px;
@@ -559,7 +559,7 @@ img {
     opacity: 0;
     transition: opacity .5s;
   }
-  .header-nav__item:hover::after {
+  .header-nav__list li:hover::after {
     opacity: 1;
   }
 }
