--- a/css/style.scss
+++ b/css/style.scss
@@ -123,33 +123,33 @@
       &.menu-pc {
         display: flex!important;
       }
-    }
-    &__item {
-      font-size: 1.4rem;
-      margin-bottom: 30px;
-      position: relative;
-      @include mq-min(lg){
-        margin-right: 20px;
-        margin-bottom: 0;
-        // transition: opacity .3s;
-        &:last-of-type {
-          margin-right: 0;
-        }
-        &::after {
-          content: "";
-          width: 100%;
-          height: 3px;
-          position: absolute;
-          bottom: -6px;
-          left: 50%;
-          transform: translateX(-50%);
-          background-color: $color-accent;
-          opacity: 0;
-          transition: opacity .5s;
-        }
-        &:hover {
+      li {
+        font-size: 1.4rem;
+        margin-bottom: 30px;
+        position: relative;
+        @include mq-min(lg){
+          margin-right: 20px;
+          margin-bottom: 0;
+          // transition: opacity .3s;
+          &:last-of-type {
+            margin-right: 0;
+          }
           &::after {
-            opacity: 1;
+            content: "";
+            width: 100%;
+            height: 3px;
+            position: absolute;
+            bottom: -6px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: $color-accent;
+            opacity: 0;
+            transition: opacity .5s;
+          }
+          &:hover {
+            &::after {
+              opacity: 1;
+            }
           }
         }
       }
