アイキャッチの表示設定

--- a/css/page/_works.scss
+++ b/css/page/_works.scss
@@ -36,6 +36,9 @@
       @include mq-min(md){
         margin-bottom: 80px;
       }
+      .size-mv {
+        height: auto;
+      }
     }
   }
   
